@@ -1,12 +1,12 @@
 package org.utn.tacs.tp.group2.utils;
 
-import com.eaio.uuid.UUID;
+import java.util.UUID;
+
 
 public class UUIDGenerator {
 
 	private static UUIDGenerator INSTANCE;
 	
-	private UUIDGenerator() {}
 	
 	public static UUIDGenerator getInstance() {
 		if(INSTANCE == null)
@@ -15,7 +15,12 @@ public class UUIDGenerator {
 	}
 
 	public Long getId() {
-		return Long.valueOf(new UUID().getClockSeqAndNode());
+//		long clockSeqAndNode = new UUID().getClockSeqAndNode();
+//		if(clockSeqAndNode < 0)
+//			clockSeqAndNode = clockSeqAndNode * -1;
+//		
+//		return Long.valueOf(clockSeqAndNode);
+		return new Long(UUID.randomUUID().hashCode());
 	}
 	
 }
